--- a/page_analyzer/templates/url.html
+++ b/page_analyzer/templates/url.html
@@ -6,7 +6,7 @@
     <title>Анализатор страниц</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="min-vh-100 d-flex flex-column">
     <header class="header" style="background-color: #212529">
       <nav class="navbar navbar-expand-md navbar-dark px-3">
         <a class="navbar-brand" href="{{ url_for('root_get') }}">Анализатор страниц</a>
@@ -22,17 +22,53 @@
     </div>
     {% endif %}
     <main>
-      <h1></h1>
       <div class="container-lg mt-3">
-        <div class="row">
-          <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5" style="background-color: #dee2e6">
-            <h1 class="display-3 text-center">Анализатор страниц</h1>
-            <p class="lead text-center">Бесплатно проверяйте сайты на SEO-пригодность</p>
-            <form action="/urls" class="d-flex justify-content-center" method="post">
-              <input type="text" class="form-control form-control-lg " name="url" placeholder="https://www.example.com">
-              <input type="submit" class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" style="background-color: #0d6efd" value="ПРОВЕРИТЬ">
-            </form>
-          </div>
+        <h1>Сайт: {{ url.name }}</h1>
+        <div class="table-responsive">
+          <table data-test="url" class="table table-bordered table-hover text-nowrap">
+            <tbody>
+            <tr>
+              <td>ID</td>
+              <td>{{ url.id }}</td>
+            </tr>
+            <tr>
+              <td>Имя</td>
+              <td>{{ url.name }}</td>
+            </tr>
+            <tr>
+              <td>Дата создания</td>
+              <td>{{ url.created_at }}</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+        <h2 class="mt-5 mb-3">Проверки</h2>
+        <form method="post" action="/urls/{{ url.id }}">
+          <input type="submit" class="btn btn-primary" value="Запустить проверку">
+        </form>
+        <div>
+          <table class="table table-bordered table-hover mt-2" data-test="checks">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Код ответа</th>
+                <th>h1</th>
+                <th>title</th>
+                <th>description</th>
+                <th>Дата создания</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </main>
