--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -12,10 +12,10 @@
   <body class="min-vh-100 d-flex flex-column">
   <header class="flex-shrink-0">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
-  <a class="navbar-brand" href="/">Анализатор страниц</a>
+  <a class="navbar-brand" href="{{ url_for('root_get')}}">Анализатор страниц</a>
   <div id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link " href="/urls">Сайты</a></li>
+        <li class="nav-item"><a class="nav-link " href="{{ url_for('urls_get')}}">Сайты</a></li>
       </ul>
     </ul>
   </div>
@@ -40,17 +40,15 @@
       <th>Код ответа</th>
     </tr>
     </thead>
-     <tbody>
-            {% for url in urls %}
-            <tr>
-                <td>{{ url.id }}</td>
-                <td>
-                    <a href="/urls/{{ url.id }}">{{ url.name }}</a>
-                </td>
-                <td>{{ url.date }}</td>
-                <td>{{ url.status }}</td>
-            </tr>
-            {% endfor %}
+    <tbody>
+    {% for url in urls %}
+        <tr>
+          <td>{{ url.id }}</td>
+          <td><a href="{{ url_for('url_get', id=url.id) }}">{{ url.name }}</a></td>
+          <td>{{ url.created_at }}</td>
+          <td></td>
+        </tr>
+    {% endfor %}
     </tbody>
   </table>
 </div>
