--- a/page_analyzer/templates/url.html
+++ b/page_analyzer/templates/url.html
@@ -43,7 +43,7 @@
           </table>
         </div>
         <h2 class="mt-5 mb-3">Проверки</h2>
-        <form method="post" action="/urls/{{ url.id }}">
+        <form method="post" action="{{ url_for('run_check', id=url.id) }}">
           <input type="submit" class="btn btn-primary" value="Запустить проверку">
         </form>
         <div>
@@ -58,16 +58,18 @@
                 <th>Дата создания</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-            </tbody>
+           <tbody>
+      {% for check in checks %}
+        <tr>
+          <td>{{ check.id }}</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>{{ check.created_at }}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
           </table>
         </div>
       </div>
