add tests for app

--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -5,7 +5,7 @@
 <div class="container-lg mt-3">
   <h1>Сайты</h1>
   <div class="table-responsive">
-    <table data-test="urls" class="align-middle text-center table table-bordered table-hover text-nowrap">
+    <table data-test="urls" class="table table-bordered table-hover text-nowrap">
       <thead>
         <th>ID</th>
         <th>Имя</th>
